--- a/.github/workflows/test_equatable_lint_x.yaml
+++ b/.github/workflows/test_equatable_lint_x.yaml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - main
+  workflow_call:
 
 jobs:
   test:
@@ -35,4 +36,4 @@ jobs:
         run: dart pub global activate pana
 
       - name: Check package score
-        run: pana --exit-code-threshold=0
+        run: pana --exit-code-threshold=10
