--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,12 +5,12 @@ homepage: https://github.com/Br0nie5/equatable_lint_x
 repository: https://github.com/Br0nie5/equatable_lint_x
 
 environment:
-  sdk: ">=2.19.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  analyzer: ^5.4.0
-  analyzer_plugin: ^0.11.2
+  analyzer: ">=5.4.0 <7.0.0"
+  analyzer_plugin: ^0.11.0
   collection: ^1.16.0
-  custom_lint_builder: ^0.2.12
+  custom_lint_builder: ">=0.2.12 <0.7.0"
   equatable: ^2.0.5
-  source_gen: ^1.2.7
+  source_gen: ">=1.2.7 <=1.5.0"
