--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,9 @@ environment:
   sdk: ">=2.19.0 <4.0.0"
 
 dependencies:
-  analyzer: ">=5.4.0 <7.0.0"
-  analyzer_plugin: ^0.11.0
-  collection: ^1.16.0
-  custom_lint_builder: ">=0.2.12 <0.7.0"
-  equatable: ^2.0.5
-  source_gen: ">=1.2.7 <=1.5.0"
+  analyzer: ^7.5.0
+  analyzer_plugin: ^0.13.0
+  collection: ^1.19.1
+  custom_lint_builder: ^0.8.0
+  equatable: ^2.0.7
+  source_gen: ^3.0.0
