manage lints and pana score

--- a/.github/workflows/test_equatable_lint_x.yaml
+++ b/.github/workflows/test_equatable_lint_x.yaml
@@ -36,4 +36,4 @@ jobs:
         run: dart pub global activate pana
 
       - name: Check package score
-        run: pana --exit-code-threshold=0
+        run: pana --exit-code-threshold=10
