--- a/.github/workflows/publish_equatable_lint_x.yaml
+++ b/.github/workflows/publish_equatable_lint_x.yaml
@@ -1,9 +1,10 @@
 name: Publish equatable_lint_x package to pub.dev
 
 on:
-  push:
-    tags:
-      - '[0-9]+.[0-9]+.[0-9]+*' # tag pattern on pub.dev: 'v{{version}'
+  # push:
+  #   tags:
+  #     - '[0-9]+.[0-9]+.[0-9]+*' # tag pattern on pub.dev: 'v{{version}'
+  workflow_dispatch: # allows manual trigger only
 
 jobs:
   test:
@@ -25,7 +26,7 @@ jobs:
       # Setup Dart SDK
       - uses: dart-lang/setup-dart@v1.6.2
         with:
-          sdk: 3.3.0
+          sdk: 3.9.0
 
       - name: Install Dependencies
         run: dart pub get
